# development-kit

./: .gitmodules  AMMDK Motherboard & Application Board.xlsx  README.md  board_init.sh
AMMDK/: bootstrap_embedded_only.sh  bootstrap_software.sh  new-som-setup.md  random_mac.sh  rename_board.sh
AMMDK.runway/: composition_data.plist
AMMDK/SDK_2/: FRDM-K66F_manifest.xml  FRDM-K66F_manifest_v3_2.xml  SW-Content-Register.txt
AMMDK/SDK_2/boards/frdmk66f/project_template/: board.h
AMMDK/SDK_2/devices/MK66F18/: MK66F18.h  MK66F18_features.h  fsl_device_registers.h  system_MK66F18.h
AMMDK/SDK_2/devices/MK66F18/cmsis_drivers/: fsl_dspi_cmsis.c  fsl_dspi_cmsis.h  fsl_lpuart_cmsis.c
AMMDK/SDK_2/devices/MK66F18/drivers/: fsl_adc16.h  fsl_clock.h  fsl_cmp.h  (+30 more)
AMMDK/SDK_2/middleware/dma_manager/: fsl_dma_manager.h
AMMDK/SDK_2/middleware/mmcau/: cau_api.h  fsl_mmcau.c
AMMDK/SDK_2/middleware/multicore/: ChangeLogKSDK.txt
AMMDK/ammdk-tiny-example/: MK66FN2M0xxx18_flash.ld  build_all.sh  build_debug.sh  gdb_instructions.txt  gencmake.sh
AMMDK/ammdk-tiny-example/CMSIS/: MK66F18_features.h
AMMDK/ammdk-tiny-example/board/: clock_config.c  clock_config.h  pin_mux.c
AMMDK/ammdk-tiny-example/drivers/: fsl_clock.h  fsl_dac.c  fsl_dspi.h  fsl_ewm.c  fsl_flash.c  fsl_flash.h  fsl_i2c_freertos.h  fsl_llwu.h  fsl_lpuart_freertos.c  fsl_mpu.c  fsl_pdb.h  fsl_rnga.c  fsl_sai.c  fsl_sdhc.h  fsl_sdramc.c  fsl_tpm.h  fsl_uart_edma.c  fsl_uart_freertos.c
AMMDK/ammdk-tiny-example/source/: FreeRTOSConfig.h  spi_edma_task.cpp  spi_proto_slave.h  spi_proto_tests.c
AMMDK/ammdk-tiny-example/utilities/: fsl_debug_console.c  fsl_debug_console.h
AMMDK/ammdk_tester/: .gitignore  CMakeLists.txt  armgcc.cmake  gencmake.sh  gpio_led_output.c
AMMDK/ammdk_tester/k66f-reqs/drivers/: fsl_cmt.c  fsl_common.c  fsl_dac.h  fsl_enet.h  fsl_flexbus.c  fsl_i2c_freertos.c  fsl_lmem_cache.h  fsl_lpuart_freertos.h  fsl_port.h  fsl_tpm.c  fsl_tsi_v4.c  fsl_wdog.c
AMMDK_Architecture.runway/: composition_data.plist
Carrier_Board_Data_Connectivity.runway/: composition_data.plist
Carrier_Board_Power_System.runway/: composition_data.plist
Power_System.runway/: composition_data.plist
application_board/: AMMDK Motherboard & Application Board.xlsx  application_board_outline.dxf  blank_application_board.PcbDoc
application_board/Refernce Implementation/: AMMDK Parts.SchLib  README.md  [01]Power & GPIO Connector.SchDoc  [02]Solenoid Driver.SchDoc  [03]Pressure and Flow.SchDoc  [04]Misc IO.SchDoc  [05]Motor.SchDoc  ammdk_shield.OutJob  ammdk_shield.PrjPcb  ammdk_shield.PrjPcbStructure  application_board_art.dxf  application_board_outline.dxf  application_board_outline.slddrw  blank_application_board.PcbDoc  bom.csv  cooling_shield.PcbDoc  cooling_shield.PrjPCB  cooling_shield.PrjPCBStructure  cooling_shield.SchDoc  shield.SchLib
application_board/Refernce Implementation/Documentation/App Board Power Connector/: DF11-16DP-2DSA.sldprt
application_board/Refernce Implementation/Documentation/fan/: 1718561002.sldprt  1718561002.step  9774080151r.sldprt  fan.sldprt  fan.step
application_board/Refernce Implementation/Documentation/honeywell_pressure_sensor/: ABP Series DIP AN Wet Media.sldprt  ABPDANT015PGAA5_SMD.sldprt  SSM-103-L-SV.sldasm  SSM-103-L-SV.stp  _C-95-023.sldprt  _SSM-103-L-SV_body.sldprt
application_board/Refernce Implementation/Documentation/led/: xzdgk45wt-9.sldprt
application_board/Refernce Implementation/Documentation/maxon_motor_driver/: SSM-109-L-DV.SLDPRT  SSM-109-L-DV.step  SSM-111-S-SV.SLDPRT  SSM-111-S-SV.step  escon_module_50-5.sldasm
application_board/Refernce Implementation/Documentation/terminal_block/: 1771156.stp  282834-2.sldprt  282834-4.sldprt  c-282834-3-c-3d.stp  c-282834-4-c-3d.stp
application_board/Refernce Implementation/Project Outputs for ammdk_shield/: generic_shield.G1  generic_shield.G2  generic_shield.GBL  generic_shield.GBO  generic_shield.GBP  generic_shield.GBS  generic_shield.GM3  generic_shield.GTL  generic_shield.GTO  generic_shield.GTP  generic_shield.GTS  generic_shield.TXT  generic_shield.apr
application_board/Refernce Implementation/Project Outputs for cooling_shield/: Design Rule Check - cooling_shield.drc  Design Rule Check - cooling_shield.html
diagrams/: AMMDK_stack.xml
diagrams/AMMDK_Architecture.runway/: composition_data.plist
diagrams/AMMDK_Common_Compute_Board.runway/: composition_data.plist
diagrams/AMMDK_Common_Compute_Board_Power_System.runway/: composition_data.plist
diagrams/AMMDK_Motherboard_Data_Connectivity.runway/: composition_data.plist
diagrams/AMMDK_Motherboard_Power_System.runway/: composition_data.plist
diagrams/AMMDK_Overview.runway/: composition_data.plist
diagrams/Carrier_Board_Data_Connectivity.runway/: composition_data.plist
diagrams/Power_Controller.runway/: composition_data.plist
software/: README.txt  bootstrap_software.sh  new-som-setup.md
software/SDK_2/devices/MK66F18/: system_MK66F18.c
software/SDK_2/middleware/dma_manager/: fsl_dma_manager.c
software/SDK_2/middleware/lwip/: ChangeLogKSDK.txt
software/SDK_2/middleware/mmcau/: fsl_mmcau.h
software/ammdk-tiny-example/: CMakeLists.txt  build_release.sh
software/ammdk-tiny-example/board/: board.h  pin_mux.h
software/ammdk-tiny-example/drivers/: fsl_crc.h  fsl_dspi_freertos.c  fsl_ewm.h  fsl_flexcan.c  fsl_flexcan.h  fsl_ftm.c  fsl_lmem_cache.c  fsl_lpuart.c  fsl_rnga.h  fsl_sai.h  fsl_sdramc.h  fsl_tsi_v4.h  fsl_uart.c  fsl_uart.h  fsl_uart_edma.h
software/ammdk-tiny-example/freertos/Source/include/: croutine.h  mpu_wrappers.h
software/ammdk-tiny-example/source/: config.h  main.cpp  spi_edma_task.h  spi_proto.cpp  spi_proto.h  spi_proto_slave.cpp
software/ammdk_tester/: .gitignore
software/ammdk_tester/board/: board.c
software/ammdk_tester/k66f-reqs/drivers/: fsl_adc16.c  fsl_clock.c  fsl_cmp.c  fsl_dspi.c  fsl_dspi_edma.c  fsl_dspi_freertos.h  fsl_enet.c  fsl_flexbus.h  fsl_ftm.h  fsl_i2c.h  fsl_lptmr.h  fsl_mpu.h  fsl_pdb.c  fsl_rtc.c  fsl_rtc.h  fsl_sai_edma.c  fsl_sai_edma.h  fsl_sdhc.c  fsl_uart_freertos.h  fsl_wdog.h
(+2493 files in other folders)
